# pypitools

./: .gitignore  .myenv  Makefile  README.md  README.rst  TODO.txt  build.py  build_docs.sh  pyproject.toml  requirements.thawed.txt  requirements.txt  run_lint.sh  setup.cfg  setup.py
config/: apt.py  general.py  git.py  helpers.py  project.py  python.py  version.py
doc/: TODO.txt
docs/: .buildinfo  404.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pypitools.endpoints.html  pypitools.html  pypitools.scripts.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pypitools.doctree  pypitools.scripts.doctree
docs/_modules/: index.html
docs/_modules/pypitools/: common.html  configs.html  git_utils.html  gitutils.html  main.html  name_utils.html  nameutils.html  process_utils.html  utils.html
docs/_modules/pypitools/endpoints/: group_default.html  (+1 more)
docs/_sources/: pypitools.endpoints.rst.txt  pypitools.rst.txt  pypitools.scripts.rst.txt
docs/_static/: basic.css  doctools.js  documentation_options.js  searchtools.js
pypitools/: __init__.py  common.py  configs.py  git_utils.py  gitutils.py  main.py  name_utils.py  nameutils.py  process_utils.py  static.py  utils.py  version.py
pypitools/endpoints/: group_default.py  main.py
pypitools/scripts/: check_config.py  install_from_local.py  install_from_remote.py  register.py  upload.py
sphinx/: conf.py  index.rst  modules.rst  pypitools.endpoints.rst  pypitools.rst  pypitools.scripts.rst
src/pypitools/: common.py  configs.py  git_utils.py  install_from_local.py  install_from_pypi.py  main.py  name_utils.py  process_utils.py  register.py  upload.py
src/pypitools/scripts/: check_config.py  install_from_local.py  install_from_pypi.py  install_from_remote.py  register.py  upload.py
templates/: README.rst.mako  requirements.txt.mako  setup.py.mako
templates/pypitools/: static.py.mako
(+1 files in other folders)
