[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypitools"
version = "0.0.79"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pypitools helps you with various pypi tasks"
readme = "README.md"
license = "MIT"
keywords=[
    "pypi",
    "register",
    "upload",
    "erase",
    "delete",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
    "twine",
    "wheel",
    "setuptools",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pypitools"
"Bug Tracker" = "https://github.com/veltzer/pypitools/issues"
"Documentation" = "https://veltzer.github.io/pypitools"
"Download" = "https://pypi.org/project/pypitools/"
"Repository" = "https://github.com/veltzer/pypitools"

[project.scripts]
pypitools = "pypitools.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pypitools"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pypitools/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
